// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledAnimals renders correctly 1`] = `
<div
  className="sc-bdVaJa dMJLPt"
/>
`;

exports[`StyledContentComponent renders correctly 1`] = `
<div
  className="sc-bwzfXH gUYEbA"
/>
`;

exports[`StyledImageRotate renders correctly 1`] = `
<div
  className="sc-htpNat dbdumx"
/>
`;

exports[`StyledRotate renders correctly 1`] = `
<div
  className="sc-bxivhb jqtXnT"
/>
`;

exports[`StyledRow renders correctly with props.top 1`] = `
<div
  className="sc-ifAKCX kLKjYd"
/>
`;

exports[`StyledRow renders correctly without props.top 1`] = `
<div
  className="sc-ifAKCX jlNCTq"
/>
`;
